--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates cum a corporis. Ab dolorum quasi iusto commodi autem, ex consequatur assumenda cupiditate aut iure repellat.
-    </p>
+    <h1> Harshini</h1>
 </body>
 </html>
